# gwidi_midi_parser

./: .gitmodules  CMakeLists.txt  GwidiData.cc  GwidiData.h  README.md  gwidi_midi.cc  gwidi_midi_parser.cc
assets/: moana.mid  slow_scale.mid  super_mario.mid  test2_data.mid  test3_data.mid  test_data.mid  undertale_snowy.mid  whats_new_scooby_doo.mid
config/: bell.ini  flute.ini  flute.json  harp_moana.json  harp_old.ini  harp_old_super_mario.ini  harp_undertale.ini  hotkeys.json  instruments.ini  instruments.json  new_harp.ini  playback.json
config/instruments/: bell.json  default.json  flute.json  manifest.json
gwidi_data/: CMakeLists.txt  GwidiData.cc  GwidiDataConverter.cc  GwidiGuiData.cc  GwidiMidiData.cc  gwidi_data-config.cmake
gwidi_data/include/: GwidiData.h  GwidiDataConverter.h  GwidiGuiData.h  GwidiMidiData.h
gwidi_data/test/: CMakeLists.txt  gwidi_gui_data_exec.cc
gwidi_hotkey/: CMakeLists.txt  gwidi_hotkey-config.cmake  gwidi_hotkey.cc
gwidi_hotkey/include/: gwidi_hotkey.h
gwidi_hotkey/test/: CMakeLists.txt  gwidi_hotkey_exec.cc
gwidi_midi/: CMakeLists.txt  gwidi_midi-config.cmake  gwidi_midi_parser.cc
gwidi_midi/include/: gwidi_midi_parser.h
gwidi_midi/test/: CMakeLists.txt  gwidi_midi.cc  gwidi_midi_exec.cc
gwidi_options/: CMakeLists.txt  gwidi_options-config.cmake  gwidi_options_parser.cc
gwidi_options/include/: GwidiOptions.h  GwidiOptions_Util.h  util.h
gwidi_options/test/: CMakeLists.txt  gwidi_options_exec.cc
gwidi_options_2/: CMakeLists.txt  gwidi_options_2-config.cmake  gwidi_options_2_parser.cc
gwidi_options_2/include/: GwidiOptions2.h  gwidi_options_2_parser.h
gwidi_options_2/test/: CMakeLists.txt  gwidi_options_2_exec.cc
gwidi_playback/: CMakeLists.txt  gwidi_playback.cc  gwidi_tick-config.cmake  gwidi_tick.cc  gwidi_tick_parser.cc
gwidi_playback/include/: GwidiPlayback.h  GwidiTickHandler.h
gwidi_playback/linux_sendinput/: CMakeLists.txt  LinuxSendInput.h  linux_send_input-config.cmake  main.cc
gwidi_playback/modules/: LIBEVDEVConfig.cmake
gwidi_playback/test/: CMakeLists.txt  gwidi_tick.cc  gwidi_tick_exec.cc
gwidi_playback/udp_sendinput/: UdpSendInput.cc  udp_sendinput-config.cmake
gwidi_playback/udp_sendinput/include/: UdpSendInput.h
gwidi_playback/udp_sendinput/test/: CMakeLists.txt  main.cc
gwidi_playback/windows_sendinput/: CMakeLists.txt  WindowsSendInput.h
gwidi_server_client/: GwidiServerClient.cc  gwidi_server_client-config.cmake
gwidi_server_client/include/: GwidiServerClient.h
gwidi_server_client/test/: CMakeLists.txt  main.cc
include/: GwidiData.h  gwidi_midi_parser.h
linux_sendinput/: CMakeLists.txt  LinuxSendInput.cc
windows_sendinput/: WindowsSendInput.cc  main.cc
